k8s/.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fitness-tracker
  template:
    metadata:
      labels:
        app: fitness-tracker
    spec:
      containers:
        - name: fitness-tracker
          image: zhenya465/fitness-tracker:latest
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
spec:
  selector:
    app: fitness-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
